[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,14 @@
             Article One | Ashik Ameer
         </title>
         <meta name="vireport" content="width-device-width,initial-scale=1"/>
+        <style>
+            .container {
+                max-width: 800px;
+                margin :0 auto;
+                color:grey;
+                font-family:sans sherif;
+            }
+        </style>
     </head>
     <body>
        <div>
