--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,13 @@
         <meta name="vireport" content="width-device-width,initial-scale=1"/>
         <style>
             .container {
-                max-width: 800px;
-                margin :0 auto;
-                color:grey;
-                font-family:sans sherif;
+             margin: 0 auto;
+             color: #000000;
+             font-family: sans sherif;
+             padding-top: 40px;
+             padding-left: 20px;
+             padding-right: 20px;
+}
             }
         </style>
     </head>
