--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,17 +4,7 @@
             Article One | Ashik Ameer
         </title>
         <meta name="vireport" content="width-device-width,initial-scale=1"/>
-        <style>
-            .container {
-             margin: 0 auto;
-             color: #000000;
-             font-family: sans sherif;
-             padding-top: 40px;
-             padding-left: 20px;
-             padding-right: 20px;
-}
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
      <div class="container">
