--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://fbcdn-photos-a-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-0/s480x480/14088638_934538693324928_5761155364103039276_n.jpg?oh=dec57c621026fadcd595cae4340422d3&amp;oe=5862F391&amp;__gda__=1486617933_ab4dce81e56fd3e1e0887ac5c21142b5" alt="https://fbcdn-photos-a-a.akamaihd.net/hphotos-ak-xla1/v/t1.0-0/s480x480/14088638_934538693324928_5761155364103039276_n.jpg?oh=dec57c621026fadcd595cae4340422d3&amp;oe=5862F391&amp;__gda__=1486617933_ab4dce81e56fd3e1e0887ac5c21142b5" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
