--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,9 @@
         <div class="center text-big bold">
             Hi! I am Ashik and this is my first webapp.
         </div>
-        
+        <div>
+            Click on this <button>Click me</button>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
