--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             Hi! I am Ashik and this is my first webapp.
         </div>
         <div>
-            Click on this <button>Click me</button>
+            Click on this <button id="button">Click me </button>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
