--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Personal
         </h1>
         <div class="center text-big bold">
-            Hi! I am Ashik and this is my first webapp.
+            Hi! I am Ashik and this hi is my first webapp.
         </div>
         <div>
             Click on this <button id="counter">Click me </button> <span id="count">0</span>times
